// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker Component basic render 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 608,
        "justifyContent": "center",
        "width": 608,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 528,
        "justifyContent": "center",
        "width": 528,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Object {
          "height": 528,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 528,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 64,
          "height": 128,
          "justifyContent": "center",
          "width": 128,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#F8F8F8",
            "borderColor": "#fff",
            "borderRadius": 64,
            "borderWidth": 8,
            "height": 112,
            "width": 112,
          }
        }
      />
      <Image
        resizeMode="contain"
        source={1}
        style={
          Object {
            "borderRadius": 64,
            "height": 128,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "width": 128,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 40,
        "height": 80,
        "justifyContent": "center",
        "left": 528,
        "opacity": 1,
        "position": "absolute",
        "top": 264,
        "width": 80,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FF0000",
          "borderRadius": 28,
          "height": 56,
          "width": 56,
        }
      }
    />
    <Image
      resizeMode="contain"
      source={1}
      style={
        Object {
          "borderRadius": 40,
          "height": 80,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 80,
        }
      }
    />
  </View>
  <View
    pointerEvents="box-only"
    style={
      Object {
        "height": 608,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 608,
      }
    }
  />
</View>
`;

exports[`ColorPicker Component component update 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 480,
        "justifyContent": "center",
        "width": 480,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "width": 400,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Object {
          "height": 400,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 400,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 64,
          "height": 128,
          "justifyContent": "center",
          "width": 128,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#F8F8F8",
            "borderColor": "#fff",
            "borderRadius": 64,
            "borderWidth": 8,
            "height": 112,
            "width": 112,
          }
        }
      />
      <Image
        resizeMode="contain"
        source={1}
        style={
          Object {
            "borderRadius": 64,
            "height": 128,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "width": 128,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 40,
        "height": 80,
        "justifyContent": "center",
        "left": 400,
        "opacity": 1,
        "position": "absolute",
        "top": 200,
        "width": 80,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FF0000",
          "borderRadius": 28,
          "height": 56,
          "width": 56,
        }
      }
    />
    <Image
      resizeMode="contain"
      source={1}
      style={
        Object {
          "borderRadius": 40,
          "height": 80,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 80,
        }
      }
    />
  </View>
  <View
    pointerEvents="box-only"
    style={
      Object {
        "height": 480,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 480,
      }
    }
  />
</View>
`;
